--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,11 +5,21 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 	<title>Vibez</title>
-	<link rel="stylesheet" href="/public/css/admin_style.css">
+	<!--<link rel="stylesheet" href="/public/css/admin_style.css">
+  
 	<link rel="stylesheet" href="/public/css/styles.css">
     <link rel="stylesheet" href="/public/css/sidebars.css">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
-    <script src="public/js/sidebar.js"></script>
+    -->
+    <script src="https://unpkg.com/vue@next"></script>
+ 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="text/css" href="/public/css/admin_style.css">
+    <link rel="text/css" href="/public/css/styles.css">
+    <link rel="text/css" href="/public/css/sidebars.css">
+ 
+    <script src="/public/js/sidebar.js"></script>
 </head>
 
 <body>
@@ -36,5 +46,11 @@
 	</div>
 
 </body>
+
+<footer id = "footer">
+    <a href ="README.md">About</a>
+    <div>©2021</div>
+</footer>
+
 
 </html>
