--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,21 +5,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 	<title>Vibez</title>
-	<!--<link rel="stylesheet" href="/public/css/admin_style.css">
+	 <link href="css/admin_style.css" rel="stylesheet" >
   
-	<link rel="stylesheet" href="/public/css/styles.css">
-    <link rel="stylesheet" href="/public/css/sidebars.css">
-    <link rel="stylesheet" href="/public/css/bootstrap.min.css">
-    -->
+	<link href="css/styles.css" rel="stylesheet">
+    <link href="css/sidebars.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+  
     <script src="https://unpkg.com/vue@next"></script>
  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="text/css" href="/public/css/admin_style.css">
-    <link rel="text/css" href="/public/css/styles.css">
-    <link rel="text/css" href="/public/css/sidebars.css">
- 
-    <script src="/public/js/sidebar.js"></script>
+  
+    <script src="js/sidebar.js"></script>
 </head>
 
 <body>
