--- a/public/css/sidebars.css
+++ b/public/css/sidebars.css
@@ -1,12 +1,12 @@
  
-  .navbar a {
+  .navitem a {
 
-    display: block;
+   
     color: black;
     background-color: lightcoral;
     border: 2px solid black;
-    border-radius: 30px;
- 
+   
+    
     text-decoration: none;
     text-align: center;
  
@@ -19,18 +19,21 @@
   display: none;
 }
 
- .openbtn{
-     background-color: lightcoral;
-    color: black;
-    right: 10px;
-    border-radius: 25%;
- }
+  .navitem{
+    color: lightcoral;
+  }
 
-  .navbar .closebtn {
-    position: absolute;
-    color: black;
-    right: 10px;
-    border-radius: 25%;
+  .clsebtn {
+    position: relative;
+   
+    left: 10px;
+     
     
   }
-  
+  .opnbtn {
+    position: absolute;
+    background-color: lightcoral;
+    right: 10px;
+     
+    
+  }
