--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,7 +55,7 @@ ul.reccomendedusr{
     list-style-type: circle;
     border-color: gold;
     font-family: fantasy;
-    padding: auto;
+ 
 }
 li.usr{
  
@@ -107,7 +107,7 @@ white-space: nowrap;
     float:right  ;
     max-width: 25%;
     min-width: auto;
-    padding: 5px;
+  
     font-size: 18px;
     z-index: 25;
     border: 2px solid white;
@@ -187,10 +187,17 @@ ul {
 }
 #feed{
     width: auto;
-    right: 10px;
-    padding: 10px;
+    
     background-color: lightblue;
 }
+
+.bodyformat{
+  background-color: black;
+   
+}
+
+
+
 .post{
     border-radius: 5px;
     border:2px solid lightcoral;
@@ -206,7 +213,10 @@ ul {
     height: 35px;
     float: left;
 }
-
+.zerofloat{
+  padding: 0%;
+  margin-right: 0%;
+}
 .post_title{
     font-size: 16px;
     font-family: sans-serif;
