--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 	<title>Vibez</title>
-	 <link href="css/admin_style.css" rel="stylesheet" >
+	 
   
 	<link href="css/styles.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <script src="js/sidebar.js"></script>
 </head>
 
-<body>
+<body class="bodyformat">
     <header>
         <div class="content d-flex flex-row">
             <img src="logos/vibez_logo.png" class="logo" width="71" height="73" alt="logo">
@@ -38,7 +38,7 @@
     </header>
 	
 
-	<div class="container">
+	<div class="zerofloat">
 		<%- body %>
 	</div>
 
