--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,12 +23,14 @@
 <body class="bodyformat">
     <header>
         <div class="d-flex flex-row">
+            <a href="/">
             <img src="logos/vibez_logo.png" class="logo" width="71" height="73" alt="logo">
+            </a>
             <h1 class="header">Vibez</h1>
             <button class="openbtn hidden" id="openbutton" onclick="openbar('sidebar')">open</button> 
             
             <div class="navitem" id = "navmenu">
-                <a href="/login" style="background-color: #ed4b4b">Login</a>
+                <a href="/login"  style="background-color: #ed4b4b">Login</a>
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
                 <a href="myprofile.html" style="background-color: #75d24b">My Profile</a>
                 <a href="messages.html" style="background-color: #4b97d8">messages</a>
