--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,9 +32,9 @@
             <div class="navitem" id = "navmenu">
                 <a href="/login"  style="background-color: #ed4b4b">Login</a>
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
-                <a href="myprofile.html" style="background-color: #75d24b">My Profile</a>
-                <a href="messages.html" style="background-color: #4b97d8">messages</a>
-                    <a href="search.html" style="background-color: #a75fc2">search</a>
+                <a href="/error" style="background-color: #75d24b">My Profile</a>
+                <a href="/error" style="background-color: #4b97d8">messages</a>
+                    <a href="/error" style="background-color: #a75fc2">search</a>
                      
             </div>
             <button id="closebutton" class = "clsebtn" onclick="closebar('sidebar')">close</button>
@@ -49,6 +49,7 @@
         <a href ="README.md">About</a>
         <div>©2021</div>
     </footer>
+
 </body>
 
 
