--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
-<script src="js/feedControl.js"></script>
+
 <div class="row" id = "app">
     <div class="row">
-        <div class="col-sm-3"></div>
-        <div class="feed col-sm-6" > <div id ="newpost">
+
+        <div class="feed col-lg-7" > <div id ="newpost">
                 New post
 
                 <form class="input">
@@ -135,10 +135,11 @@
 
 
             </div></div>
-        <div class="col-sm-3 explore">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-4 explore">
 
             <div class="trendbox">
-                <div>Trending People </div>
+                <div id="resize">Trending People </div>
                 <ul class="reccomendedusr">
                     <li class="usr hdiv">
                         <a href="profiles/temp_1.html"  id = "userlink1" class="betterlink"> Darth Vader</a>
@@ -214,9 +215,6 @@
 
         </div>
 
-    <div class=" column-sm-6 feed">
-
-    </div>
 
 
 
