--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form name="signupForm" onsubmit="return validateForm(this)" action="/security" method="POST">
+    <form name="signupForm" onsubmit="return checkPassword(this)" action="/subscribe" method="POST">
         <div id="login-box">
             <div class="left-box">
                 <h1> Sign Up</h1>
