--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <form action="/" method="POST">
     <div class="section">
         <div class="content">
             <img src="/logos/vibez.png" width="80px" height="70px">
@@ -26,19 +27,16 @@
                 <input type="password" class="password" placeholder="Password" required><br>
             </div>
             <div class="btn">
-                <button type="submit" class="login-btn">
-                    Log In
-                </button>
+                <input class="button" type="submit" name="login" value="Log In" />
             </div>
-            <div class="btn">
-                <br>
-                <p><a href=""> Forgot Username?</a></p><br>
-                <p><a href=""> Forgot Password?</a></p>
-            </div>
+                <p><a href="/security"> Forgot Username?</a></p><br>
+                <p><a href="/security"> Forgot Password?</a></p>
+      
 
         </div>
 
     </div>
+    </form>
 </body>
 
 </html>
