--- a/public/css/sign_in.css
+++ b/public/css/sign_in.css
@@ -35,12 +35,13 @@
 
 }
 
-.btn button{
+.button{
   
   text-align: center;
-  margin-left: 22%;
-  margin-top: 5%;
-  padding: 15px;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 50%;
+  padding: 10px;
   width: 200px;
   border-radius: 30px;
   border: none;
@@ -55,8 +56,9 @@ input {
   color: white;
 }
 
-p a {
-  margin-left: 26.5%;
+p {
+  margin-left: 23%;
   color: white;
-  margin-top: 100%;
+  
+  
 }
