--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
                 <a href="/error" style="background-color: #75d24b">My Profile</a>
                 <a href="/error" style="background-color: #4b97d8">messages</a>
-                    <a href="/error" style="background-color: #a75fc2">search</a>
+                    <a href="/search" style="background-color: #a75fc2">search</a>
                      
             </div>
             <button id="closebutton" class = "clsebtn" onclick="closebar('sidebar')">close</button>
