--- a/public/css/search.css
+++ b/public/css/search.css
@@ -11,13 +11,13 @@ body{
 
 .search-box{
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     background: #2f3640;
     height: 40px;
     border-radius: 40px;
     padding: 10px;
+    background-color: lightcoral;
 }
 
 .search-box:hover > .search-txt{
@@ -32,7 +32,8 @@ body{
 
 .search-btn{
     color: white;
-    float:right;
+    
+    margin-left: 110%;
     width: 40px;
     height: 40px;
     border-radius: 50%;
