--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,139 +2,18 @@
 <div class="row" id = "app">
     <div class="row">
 
-        <div class="feed col-lg-7" > <div id ="newpost">
-                New post
-
-                <form class="input">
-                    <label for="ititle"><br>Post Title</label> <br>
-                    <input type="text" id="ititle" class="intitle" name="title"><br>
-                    <div>Content:</div>
-                    <div id="postbody" class="input" role="textbox"
-                         contenteditable >
-                        Input Some Good Vibez Here
+        <div class="feed col-lg-7" >  <div class="card">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="..." class="card-img" alt="...">
                     </div>
-
-                    <button id="postbutton">
-                        Post
-                    </button>
-                </form>
-            </div>
-            <div class = "post">
-
-
-
-                <div class="post_title">
-                    <img src="logos/vibez_logo.png" class="profile_pic" alt="profile pic">
-                    Welcome To Vibez
-                    <br>
-                    Vibez Staff
-
-                </div>
-                <div class="post_content">
-                    <p>
-                        This is a mockup of our home page, on the right are trending users and topics, on the left is our navigation bar, these are examples of what posts might look like.
-                    </p>
-                </div>
-
-
-
-            </div>
-
-            <div class = "post">
-
-
-
-                <div class="post_title">
-                    <img src="/profile_pics/neeson.PNG" class="profile_pic" alt="profile pic">
-                    Who Are You?
-                    <br>
-                    Bryan Mills
-
-                </div>
-                <div class="post_content">
-                    <p>
-                        I don't know who you are. I don't know what you want. If you are looking for ransom, I can tell you I don't have money. But what I do have are a very particular set of skills; skills I have acquired over a very long career. Skills that make me a nightmare for people like you. If you let my daughter go now, that'll be the end of it. I will not look for you, I will not pursue you. But if you don't, I will look for you, I will find you, and I will kill you.
-
-                    </p>
-                </div>
-
-
-
-            </div>
-
-
-            <div class = "post">
-
-
-
-                <div class="post_title">
-                    <img src="logos/vibez_logo.png" class="profile_pic" alt="profile pic">
-                    What to do?
-                    <br>
-                    post author
-
-                </div>
-                <div class="post_content">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-
-            </div>
-
-
-            <div class = "post">
-
-
-
-                <div class="post_title">
-                    <img src="profile_pics/montoya.png" class="profile_pic" alt="profile pic">
-                    To A Certain Count
-                    <br>
-                    Inigo Montoya
-
-                </div>
-                <div class="post_content">
-                    <p>
-                        Hello, my name is Inigo Montoya. You killed my father. Prepare to die.
-
-                    </p>
-                </div>
-
-
-
-            </div>
-
-
-            <div class = "post">
-
-
-
-                <div class="post_title">
-                    <img src="profile_pics/bee.png" class="profile_pic" alt="profile pic">
-                    About The Bees
-                    <br>
-                    Barry B. Benson
-
-                </div>
-                <div class="post_content">
-                    <p>
-                        According to all known laws
-                        of aviation,
-                        there is no way a bee
-                        should be able to fly.
-                        Its wings are too small to get
-                        its fat little body off the ground.
-                        The bee, of course, flies anyway
-                        because bees don't care
-                        what humans think is impossible.
-
-                    </p>
-                </div>
-
-
-
-            </div></div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div></div></div></div>
         <div class="col-lg-1"></div>
         <div class="col-lg-4 explore">
 
