--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -197,14 +197,14 @@ ul {
   border-radius: 5%;
 }
 #feed{
-    position: relative;
-    z-index: 2;
-    width:auto;
-    float: left;
-    background-color: lightblue;
+
+    background-color: transparent
+}
+#sideGradient{
+
+    background-image: linear-gradient(to bottom, rgba(255,0,0,0),#ed4b4b, rgba(255,0,0,0),#f2b157, rgba(255,0,0,0),#75d24b, rgba(255,0,0,0),#4b97d8, rgba(255,0,0,0),#a75fc2, rgba(255,0,0,0));
 
 }
-
 .bodyformat{
   background-color: black;
    
