user edit update

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,7 +33,7 @@
             <div class="navitem" id = "navmenu">
                 <a href="/login"  style="background-color: #ed4b4b">Login</a>
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
-                <a href="/error" style="background-color: #75d24b">My Profile</a>
+                <a href="/myProfile" style="background-color: #75d24b">My Profile</a>
                 <a href="/error" style="background-color: #4b97d8">messages</a>
                     <a href="/search" style="background-color: #a75fc2">search</a>
                      
@@ -47,6 +47,7 @@
 		<%- body %>
 	</div>
     <footer id = "footer">
+        <script src="js/userApp.js"></script>
         <script src="js/feedApp.js"></script>
         <a href ="README.md">About</a>
         <div>©2021</div>
