--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,5 +1,13 @@
 <script src = ""></script>
 <div class = "row">
+    <div class="col-sm-4">
 
-    <%= usr.username %>
+    </div>
+    <div class="col-sm-3">
+    UserName: <%= usr.username %><br>
+
+    Email: <%= usr.email%>
+       </div>
+
+    <a class="col-md-3 delete_link" href="/delete">goto delete page</a>
 </div>
