--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -205,6 +205,14 @@ ul {
     background-image: linear-gradient(to bottom, rgba(255,0,0,0),#ed4b4b, rgba(255,0,0,0),#f2b157, rgba(255,0,0,0),#75d24b, rgba(255,0,0,0),#4b97d8, rgba(255,0,0,0),#a75fc2, rgba(255,0,0,0));
 
 }
+
+.postbutton{
+    background-image: radial-gradient(  #ed4b4b ,#f2b157, #75d24b, #4b97d8,  #a75fc2);
+    padding: 5px;
+    border-radius: 10px;
+    align-content: center;
+
+}
 .bodyformat{
   background-color: black;
    
@@ -233,13 +241,19 @@ ul {
   margin-right: 0%;
 }
 .post_title{
-    font-size: 16px;
-    font-family: sans-serif;
-    border: 2px solid white;
-
+    position: relative;
     text-align: center;
-    padding: 8px;
-    height: 60px;
+}
+
+.delete_link{
+    background-color: red;
+    text: black;
+}
+.delete_button{
+    margin-left: 47%;
+}
+.center_header{
+    text-align: center;
 }
 .post_content{
     font-size: 16px;
