--- a/views/users/delete.ejs
+++ b/views/users/delete.ejs
@@ -1,6 +1,6 @@
-<div>
+<div id="userapp">
     <h1 class="center_header">THIS WILL PERMANATELY DELETE YOUR ACCOUNT</h1>
     <div class="center_header">click the button below to delete your account</div>
-    <button class="delete_link delete_button center_header">DELETE</button>
+    <button class="delete_link delete_button center_header" v-on:click="deleteThisAccount">DELETE</button>
 
 </div>
