--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
                 <input type="password" id="password" name="password" class="password" placeholder="Password" required><br>
             </div>
             <div class="btn">
-                <button type="submit">Log In</button>
+                <button type="submit" class="button">Log In</button>
             </div>
                 <p><a href="/security"> Forgot Username?</a></p><br>
                 <p><a href="/security"> Forgot Password?</a></p>
