--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -255,7 +255,13 @@ ul {
 .center_header{
     text-align: center;
 }
- 
+ .usrcard{
+     text-align: center;
+     background: rgb(50,50,50);
+     border-radius: 10px;
+     margin: 5px;
+     padding: 5px;
+ }
 .post_content{
     font-size: 16px;
     font-family: sans-serif;
