--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,8 @@
         <div id="login-box">
             <div class="left-box">
                 <h1> Sign Up</h1>
-                <input type="text" name="Username" placeholder="Username" />
+                <input type="text" name="firstName" placeholder="First Name" />
+                <input type="text" name="lastName" placeholder="Last Name" />
                 <input type="email" name="email" placeholder="Email" required />
                 <input type="password" id="pass1" name="password1" placeholder="Password" />
                 <input type="password" name="password2" placeholder="Retype Password" />
