--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,9 +4,8 @@
 <head>
     <title> Sign Up with Vibez</title>
     <link rel="stylesheet" href="/css/signup.css">
+    <script src="/js/validateForm.js"></script>
     
-
-
 </head>
 
 <body>
@@ -34,7 +33,7 @@
             </div>
             <div class="or"> OR </div>
         </div>
-        <script src="js/validateForm.js"></script>
+        <script src="/js/validateForm.js"></script>
     </form>
 </body>
 
