--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
         </div>
         <div class="heading">
             <h2>
-                Log In To Vibez <br>
+                Log To Vibez <br>
             </h2>
         </div>
 
