--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
 
         <div class="main">
             <div class="form">
-                <input type="email" id="email" name="email" class="text" placeholder="Email or Username" required><br>
+                <input type="email" id="email" name="email" class="text" placeholder="Email" required><br>
                 <input type="password" id="password" name="password" class="password" placeholder="Password" required><br>
             </div>
             <div class="btn">
