--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -12,7 +12,7 @@
     <form name="signupForm" onsubmit="return checkPassword(this)" action="/subscribe" method="POST">
         <div id="login-box">
             <div class="left-box">
-                <h1> Sign Up</h1>
+                <h1> Sign Up with Vibez</h1>
                 <input type="text" name="firstName" placeholder="First Name" />
                 <input type="text" name="lastName" placeholder="Last Name" />
                 <input type="email" name="email" placeholder="Email" required />
