--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -262,6 +262,10 @@ ul {
      margin: 5px;
      padding: 5px;
  }
+
+ .post_footer{
+     background-color: transparent;
+ }
 .post_content{
     font-size: 16px;
     font-family: sans-serif;
