--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,6 +34,11 @@
                                 <h5 class="post_title">{{post.post_title}}</h5>
                                 <p class="card-text">{{post.post_author}}</p>
                                 <p class="card-text">{{post.post_content}}</p>
+                                <ul class="post_footer">
+                                    <li class="card-footer">
+                                        test
+                                    </li>
+                                </ul>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
