--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,6 +53,17 @@
         <div>©2021</div>
     </footer>
 
+    <div class="flashes">
+        <% if (flashMessages) { %>
+          <% if (flashMessages.success) { %>
+            <div class="flash success"><%= flashMessages.success %></div>
+          <% } else if (flashMessages.error) { %>
+            <div class="flash error"><%= flashMessages.error %></div>
+          <% } %>
+        <% } %>
+      </div>
+
+
 </body>
 
 
