more work on tags
correctly updates their populatiry in db

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 
-<div class="row" id = "feedApp" :key="pid">
-    <div class="row">
+<div class="row" >
+    <div class="row" id = "feedApp" :key="pid">
         <div class="col-sm-1"></div>
         <div class="feed col-lg-7">
             <div  class="card mb-3">
@@ -50,10 +50,14 @@
             </template>
              </div>
 
-        <div class="col-lg-1"></div>
+
 
 
         </div>
+    <div class="col-lg-1" id="tagApp">{{message}}</div>
+    <div>
+
+    </div>
 </div>
 
 
@@ -72,4 +76,3 @@
 
 
 
-</div></div>
