--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,6 +49,9 @@
     <footer id = "footer">
         <script src="js/userApp.js"></script>
         <script src="js/feedApp.js"></script>
+        <script src = "js/tagApp.js">
+
+        </script>
         <a href ="README.md">About</a>
         <div>©2021</div>
     </footer>
